<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            android:defaultValue="@string/pref_default_display_name"
            android:key="user_display_name"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:summary="Your name Here"
            android:title="@string/pref_tile_display_name" />
        <EditTextPreference
            android:defaultValue="@string/pref_defaul_email_address"
            android:key="user_email_address"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            android:summary="Your Email Here"
            android:title="@string/pref_title_email_address" />
        <ListPreference
            android:defaultValue="@string/pref_favorite_social_default"
            android:entries="@array/pref_entries_favorite_social"
            android:entryValues="@array/pref_values_favorire_social"
            android:key="user_favorite_social"
            android:summary="Your Favorite Social Network Here"
            android:title="@string/pref_favorite_social_title" />


    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
